syntax = "proto3";
option csharp_namespace = "Backend";
import "Messages.proto";

service VehicleActor {
  rpc OnPosition (Position) returns (Ack);
}

service ViewportActor {
  rpc UpdateViewport (UpdateViewport) returns (Ack);
}